[gd_scene load_steps=22 format=2]

[ext_resource path="res://entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/states/WalkState.gd" type="Script" id=2]
[ext_resource path="res://entities/player/PlayerStateMachine.gd" type="Script" id=3]
[ext_resource path="res://entities/player/Cannon.gd" type="Script" id=4]
[ext_resource path="res://entities/player/PlayerProjectile.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/player/states/IdleState.gd" type="Script" id=6]
[ext_resource path="res://assets/textures/player/girl_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/player/slimeGreen.png" type="Texture" id=8]
[ext_resource path="res://entities/player/states/DeadState.gd" type="Script" id=9]
[ext_resource path="res://entities/player/states/JumpState.gd" type="Script" id=10]
[ext_resource path="res://entities/player/states/DashState.gd" type="Script" id=11]
[ext_resource path="res://assets/textures/player/raygunPurpleBig.png" type="Texture" id=12]
[ext_resource path="res://assets/audio/sfx/Leaves2.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/sfx/Leaves1.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/audio/sfx/Jump.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "dead"
length = 1.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Slime:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.5, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("PlayerInteraction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 15 )
} ],
"times": PoolRealArray( 0.0591397 )
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.95
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("PlayerInteraction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.212778, 0.666475 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerInteraction:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.00041943, 0.510447 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 13 ) ]
}

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 6752, 3008 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 18.9774
height = 76.5765

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
dash_time = 0.4
speed_multiplier = 4.0

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = SubResource( 5 )
offset = Vector2( 50, 0 )
hframes = 15
vframes = 8
frame = 58

[node name="Slime" type="Sprite" parent="Body"]
position = Vector2( -2.52264, -144.634 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
flip_h = true

[node name="CannonContainer" type="Node2D" parent="Body/Slime"]
position = Vector2( 1.26132, 72.3171 )

[node name="Cannon" type="Sprite" parent="Body/Slime/CannonContainer"]
position = Vector2( 1.40247, -63.5032 )
texture = ExtResource( 12 )
script = ExtResource( 4 )
projectile_scene = ExtResource( 5 )

[node name="CannonTip" type="Position2D" parent="Body/Slime/CannonContainer/Cannon"]
position = Vector2( 15, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="FloorRaycasts" type="Node2D" parent="."]
position = Vector2( 0, 56 )

[node name="FloorRaycast1" type="RayCast2D" parent="FloorRaycasts"]
cast_to = Vector2( 0, 5 )

[node name="FloorRaycast2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -15, 0 )
cast_to = Vector2( 0, 5 )

[node name="FloorRaycast3" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 15, 0 )
cast_to = Vector2( 0, 5 )

[node name="PlayerSfx" type="AudioStreamPlayer" parent="."]

[node name="PlayerInteraction" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
